--- a/The_final_boss/views/home.html
+++ b/The_final_boss/views/home.html
@@ -7,13 +7,13 @@
 
 
     <link rel='stylesheet' type='text/css' href='public/postlog.css'>
-    <script src="public/loggedin.js.js" defer></script>
+    <script src="public/loggedin.js" defer></script>
   </head>
   <body>
 
     <div class="topnav">
   
-      <a href="">slidespace</a>
+      <a href="/comment">comment</a>
       <a href="/leaderboard">leaderboard</a>
       <a href="/home">Setting</a>
       <a href="/mvp">MVP</a>
