--- a/The_final_boss/public/postlog.css
+++ b/The_final_boss/public/postlog.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
+
    
   }
   
@@ -105,4 +106,7 @@ tr:nth-child(even) {
 
 #template{
   visibility: hidden;
+}
+h1 {
+  padding-left: 200px;
 }
