--- a/The_final_boss/views/mvp.html
+++ b/The_final_boss/views/mvp.html
@@ -13,7 +13,7 @@
 
     <div class="topnav">
   
-      <a href="">slidespace</a>
+      <a href="/comment">comment</a>
       <a href="/leaderboard">leaderboard</a>
       <a href="/home">Setting</a>
       <a href="/mvp">MVP</a>
